--- a/projects.html
+++ b/projects.html
@@ -32,8 +32,8 @@
     <td>https://009098.github.io/Owens-Website/index.html</td>
   </tr>
   <tr>
-    <td></td>
-    <td></td> 
+    <td>Coded Card</td>
+    <td>We created a digital card.</td> 
     <td></td>
   </tr>
 </table>
