--- a/projects.html
+++ b/projects.html
@@ -29,7 +29,7 @@
   <tr>
     <td>Website Project</td>
     <td>Create a website!</td> 
-    <td>https://009098.github.io/Owens-Website/index.html</td>
+    <td> <a href="https://009098.github.io/Owens-Website/index.html">Website</a></td>
   </tr>
   <tr>
     <td>Coded Card</td>
