--- a/skittles.html
+++ b/skittles.html
@@ -10,14 +10,12 @@
   <link rel="stylesheet" href="https://009098.github.io/Owens-Website/style.css">
 </head>
 <body>  
-  <h1>Skittles Project</h1>
-  <ul>
-  <li><a href="index.html">Home</a></li>
-  <li><a href="hobbies.html">Hobbies</a></li>
-  <li><a href="projects.html">Projects</a></li>
-  <li><a href="about.asp">Soccer And I</a></li>
-</ul><br>
-  
+  <h1>What makes the perfect skittle?</h1>
+  <h2>Data Collection</h2>
+  <p>To collect the data we tried one skittle at a time until we had tased 100 skittles and their qualiteies. Then we judged how the skittles tasted on a rating system 1-5.</p>
+      <h2>Data Analysis</h2>
+  <p>Some patterns we found were the averages of visiblity of the S,Condition of the shell and the Juiciness of the skittle these are the
+    average Visiblity 2.9 condition 3.9 juiciness 3.6.The # of 0's,15 the # of 1's 7,the # 2's 13,
   </body>
-</html>
+  </html>
 
