--- a/skittles.html
+++ b/skittles.html
@@ -1,21 +1,30 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
+   <link rel="stylesheet" href="style.css">
 <head>
-  <meta charset="utf-8">
-
-  <title>Owen's Site</title>
-  <meta name="description" content="Owen's Site">
-  <meta name="author" content="SitePoint">
-  <link rel="stylesheet" href="https://009098.github.io/Owens-Website/style.css">
+<title>Skittles Project</title>
 </head>
-<body>  
+<body>
+
+<h1>Skittles Project</h1>
+   <ul>
+  <li><a href="https://dylandipz.github.io/CompSciReed/">Home</a></li>
+  <li><a href="hobbies.html">Hobbies</a></li>
+  <li><a href="projects.html">Projects</a></li>
+       <li><a href="hamburger.html">Perfect Hamburger</a></li>
+     
+</ul>
+  
   <h1>What makes the perfect skittle?</h1>
   <h2>Data Collection</h2>
-  <p>To collect the data we tried one skittle at a time until we had tased 100 skittles and their qualiteies. Then we judged how the skittles tasted on a rating system 1-5.</p>
-      <h2>Data Analysis</h2>
-  <p>Some patterns we found were the averages of visiblity of the S,Condition of the shell and the Juiciness of the skittle these are the
-    average Visiblity 2.9 condition 3.9 juiciness 3.6.The # of 0's,15 the # of 1's 7,the # 2's 13,
-  </body>
-  </html>
+  <p>To collect the data we tried one skittle at a time until we had tasted 100 skittles and their qualities. Then we judged how the skittles tasted on a rating system 1-5. The qualities we judged were the visibility of the S, the condition of the shell and the juicness of the skittle. Here is a snippet of our data collection that we took.</p>
+   <div style="text-align: center;">  <img src="data.png"> </div>
+   <h2>Data Analysis</h2>
+  <p>Some patterns we found were the averages of visiblity of the S, condition of the shell and the juiciness of the skittle these are the
+    averages:  Visiblity: 2.9, Condition: 3.9, Juiciness 3.6. We then found how often each ranking occurred. For the visibility of the S we found there were: 15 zeros, 7 ones, 13 twos, 17 threes, 23 fours and 25 fives. For the condition of the shell there were: 2 zeros, 3 ones, 5 twos, 18 threes, 36 fours and 36 fives. Finally, for the juicness there were: 3 zeros, 1 one, 16 twos, 29 threes, 18 fours and 27 fives. </p>
+  <img src="condition.png" width="450"> <img src="visibility.png" width="450"> <img src="juiciness.png" width="450"> 
+   <h2> Conclusion </h2>
+<p> What makes the perfect skittle? That is the question that we asked at the beginning of this experiment, and now we have an answer. The results that we came up with is that 1 out of every 25 skittles will be “perfect”. Now, in saying this that means that there aren't very many perfect skittles per bag. Which also means that it's rare that we even got 4 in our bag! In conclusion we have discovered that the perfect skittle contains juicy contents, a clear S marking on the front and has a very good condition of the shell. So get your wallet out, drive to target and buy a huge 54oz bag and stuff your face with the rainbow! </p>
 
+</body>
+</html>
