--- a/projects.html
+++ b/projects.html
@@ -34,8 +34,12 @@
   <tr>
     <td>Coded Card</td>
     <td>We created a digital card.</td> 
-    <td>https://goo.gl/wX8Mjt</td>
+    <td> <a href="https://goo.gl/wX8Mjt">Digital Card</a></td>
   </tr>
+    <tr>
+      <td>Skittles Project</td>
+      <td>We collected data on the qualities of a skittle.</td>
+      <td> <a href="skittles.html">Skittles Page</a></td>
 </table>
  
   </body>
