--- a/pet.html
+++ b/pet.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html>
+   <link rel="stylesheet" href="style.css">
+<head>
+<title>Pet Project</title>
+</head>
+<body>
 
+<h1>Pet Project</h1>
+   <ul>
+  <li><a href="https://github.com/009098/Owens-Website">Home</a></li>
+  <li><a href="hobbies.html">Hobbies</a></li>
+  <li><a href="projects.html">Projects</a></li>
+       <li><a href="hamburger.html">Perfect Hamburger</a></li>
+     
+</ul>
+  
+  <h1>What can be considered the best pet?</h1>
+  <h2>Data Collection</h2>
+  <p>To collect our data we went to a website called Tuva Labs. On Tuva we used the data that they gave us to create graphs and to start answering our question.</p>
+   <div style="text-align: center;">  <img src="data.PNG"> </div>
+   <h2>Data Analysis</h2>
+  <p></p>
+  <img src="condition.png" width="450"> <img src="visibility.png" width="450"> <img src="juiciness.png" width="450"> 
+   <h2> Conclusion </h2>
+<p>+w</p>
+
+</body>
+</html>
