--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,12 @@
       <td>Skittles Project</td>
       <td>We collected data on the qualities of a skittle.</td>
       <td> <a href="skittles.html">Skittles Page</a></td>
+    </tr>
+   <tr>
+     <td>Final Data Project</td>
+     <td>We collected data to search about what the best pet is.</td>
+     <td> <a href="dogo.html">Dog Page</a></td>
+    </tr>
 </table>
  
   </body>
