--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
    <tr>
      <td>Final Data Project</td>
      <td>We collected data to search about what the best pet is.</td>
-     <td> <a href="pets.html">Dog Page</a></td>
+     <td> <a href="pet.html">Dog Page</a></td>
     </tr>
 </table>
  
