--- a/skittles.html
+++ b/skittles.html
@@ -7,12 +7,11 @@
 <body>
 
 <h1>Skittles Project</h1>
-   <ul>
-  <li><a href="https://dylandipz.github.io/CompSciReed/">Home</a></li>
+     <ul>
+  <li><a href="index.html">Home</a></li>
   <li><a href="hobbies.html">Hobbies</a></li>
   <li><a href="projects.html">Projects</a></li>
-       <li><a href="hamburger.html">Perfect Hamburger</a></li>
-     
+  <li><a href="SoccerAndI.html">Soccer And I</a></li>
 </ul>
   
   <h1>What makes the perfect skittle?</h1>
