--- a/pet.html
+++ b/pet.html
@@ -8,7 +8,12 @@
 <body>
 
 <h1>Pet Project</h1>
-  
+  <ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="hobbies.html">Hobbies</a></li>
+  <li><a href="projects.html">Projects</a></li>
+  <li><a href="SoccerAndI.html">Soccer And I</a></li>
+</ul>
   
   <h1>What can be considered the best pet?</h1>
   <h2>Graphs</h2>
