--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,11 @@
      <td>We collected data to search about what the best pet is.</td>
      <td> <a href="pet.html">Dog Page</a></td>
     </tr>
+    <tr>
+      <td>Video Game</td>
+      <td>We created a video game of our choice. Mine is called Modded Mario.</td>
+      <td> <a href="https://studio.code.org/projects/gamelab/VXrYM57cyjHaZEORatyLGxmm6VVIbk1QX_2TdPaJDQA">Modded Mario</a></td>
+    </tr>
 </table>
  
   </body>
